# santorini

./: .gitignore  Cargo.toml  build.sbt
.github/workflows/: rust.yml
santorini-common/: Cargo.toml
santorini-common/examples/: repl.rs  simple.rs
santorini-common/src/: command.rs  error.rs  input.rs  lib.rs  main.rs  phase.rs  player.rs  position.rs  state.rs  tower.rs
santorini-common/src/objects/: mod.rs  player.rs  space.rs  state.rs  tower.rs  worker.rs
santorini-common/tests/: simple_commands_test.rs
santorini-server/: Cargo.toml
santorini-server/src/: main.rs
santorini-web/: Cargo.toml
santorini-web/src/: main.rs
src/main/scala/santorini/: Board.scala  Direction.scala  Game.scala  Player.scala  Tile.scala  Worker.scala
src/test/scala/: TileSpec.scala  WorkerSpec.scala
