[package]
name = "santorini-common"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
colored = "1.9.0"
