[package]
name = "santorini-web"
version = "0.1.0"
authors = ["mingyli <mingyli34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.3"
async-tungstenite = { version = "0.8", features = ["async-std-runtime"] }
bincode = "1.3.1"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }

santorini-common = { path = "../santorini-common" }
